--- a/00-zusammenfassung.Rmd
+++ b/00-zusammenfassung.Rmd
@@ -1,4 +1,4 @@
-# About {.unnumbered}
+# Index {.unnumbered}
 
 Besides a print version, there is also an electronic version (gitbook) of this thesis^[kleinhansda.github.io/phd_thesis]. 
 
@@ -13,7 +13,7 @@ This thesis are stored in a git repository^[github.com/KleinhansDa/phd_thesis].
     + right pages (odd numbers) show the wildtype
     + left pages (even numbers) show the mutant
 
-## Electronic version {.unnumbered}
+### Electronic version {.unnumbered}
 
 - Download pdf
 - Change display settings
