--- a/00-zusammenfassung.Rmd
+++ b/00-zusammenfassung.Rmd
@@ -2,7 +2,7 @@
 
 Besides a print version, there is also an electronic version (gitbook) of this thesis^[kleinhansda.github.io/phd_thesis]. 
 
-This thesis are stored in a git repository^[github.com/KleinhansDa/phd_thesis].
+In addition, the contents of this thesis are stored in a git repository^[github.com/KleinhansDa/phd_thesis].
 
 ![](figures/flipbook/flip.png)
 
